--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="login-wrapper">
         <div class="left-side">
-            <img src="/img/instagram-celular.png" alt="">
+            <img src="img/instagram-celular.png" alt="">
         </div>
         
         <div class="right-side">
             <div class="box-content">
-                <img src="/img/instagram-logo.png" alt="instagram-logo" class="instagram-logo">
+                <img src="img/instagram-logo.png" alt="instagram-logo" class="instagram-logo">
                 <div class="profile-pic">
-                    <img src="/img/perfil-instagram.jpg" alt="">
+                    <img src="img/perfil-instagram.jpg" alt="">
                 </div>
                 <a href="#" class="instagram-login">Continuar como Juanma.hinojosa</a>
             </div>
